style: fix warnings